--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,8 @@
 version: '3'
-services:
+services: 
   web:
     build:
       context: .
-      dockerfile: Dockerfile.dev
-    volumes:
-      - /app/node_modules
-      - .:/app
+      dockerfile: Dockerfile
     ports: 
-      - '3000:3000'
-  tests:
-    build:
-      context: .
-      dockerfile: Dockerfile.dev
-    volumes:
-      - /app/node_modules
-      - .:/app
-    command: ["npm", "run", "test"]
+      - '81:81'
