--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ deploy:
   on:
     branch: main
   access_key_id: $AWS_ACCESS_KEY
-  secret_key_id: "$AWS_SECRET_KEY"
+  secret_access_key: "$AWS_SECRET_KEY"
